# RemCCG

./: CMakeLists.txt  README.md  install.sh
lib/ccg/: CMakeLists.txt  a.out  block.c  ccg.c  ccg.h  constant.c  expression.c  func.c  integer.c  label.c  map-test.c  pointer.c  statement.c  temp  test.c  types.h  utils.c  variable.c
src/: CMakeLists.txt  c_proto.proto  proto_to_c.cc  proto_to_c.h  remccg.cc  util.cc  util.h
